# ChangeLog for dev-java/oracle-jdk-bin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.22 2012/08/31 10:03:42 caster Exp $

*oracle-jdk-bin-1.7.0.7 (31 Aug 2012)

  31 Aug 2012; Vlastimil Babka <caster@gentoo.org>
  +oracle-jdk-bin-1.7.0.7.ebuild:
  Version bump, security bug #433094.

*oracle-jdk-bin-1.7.0.6 (19 Aug 2012)

  19 Aug 2012; Vlastimil Babka <caster@gentoo.org>
  -oracle-jdk-bin-1.7.0.3.ebuild, -oracle-jdk-bin-1.7.0.4.ebuild,
  -oracle-jdk-bin-1.7.0.5.ebuild, +oracle-jdk-bin-1.7.0.6.ebuild:
  Version bump, bug #431692. Version 1.7.0.5 is no longer officially
  available...

*oracle-jdk-bin-1.7.0.5-r2 (23 Jul 2012)

  23 Jul 2012; Ralph Sennhauser <sera@gentoo.org>
  +oracle-jdk-bin-1.7.0.5-r2.ebuild, metadata.xml:
  Oracle also changed the distfiles of the demos. #427534.
  Add fontconfig support.
  Use paxctl for pax marking as the fallback won't create the headers. Thanks
  to blueness. #427642
  Add BSD license for examples.

  14 Jul 2012; Jeff Horelick <jdhore@gentoo.org>
  oracle-jdk-bin-1.7.0.5-r1.ebuild:
  marked x86 per bug 421073

*oracle-jdk-bin-1.7.0.5-r1 (12 Jul 2012)

  12 Jul 2012; Vlastimil Babka <caster@gentoo.org>
  +oracle-jdk-bin-1.7.0.5-r1.ebuild:
  Revbump because upstream changed contents of the distfiles (not saying what
  exactly). You will have to redownload them, sorry.

  09 Jul 2012; Jeff Horelick <jdhore@gentoo.org> oracle-jdk-bin-1.7.0.5.ebuild:
  marked x86 per bug 421073

*oracle-jdk-bin-1.7.0.5 (14 Jun 2012)

  14 Jun 2012; Ralph Sennhauser <sera@gentoo.org>
  +oracle-jdk-bin-1.7.0.5.ebuild:
  Security bump. #421073

*oracle-jdk-bin-1.7.0.4 (05 May 2012)

  05 May 2012; Ralph Sennhauser <sera@gentoo.org>
  +oracle-jdk-bin-1.7.0.4.ebuild:
  Version bump. #414775

  05 May 2012; Ralph Sennhauser <sera@gentoo.org>
  oracle-jdk-bin-1.7.0.3.ebuild:
  Add QA_FLAGS_IGNORED. #405639
