@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/sun-jdk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.332 2012/08/31 10:39:51 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.333 2012/08/31 16:58:59 caster Exp $
+
+  31 Aug 2012; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.6.0.35.ebuild:
+  Fix download URL, bug #433553.
 
 *sun-jdk-1.6.0.35 (31 Aug 2012)
 
