@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/sun-jre-bin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jre-bin/ChangeLog,v 1.220 2012/08/31 10:45:04 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jre-bin/ChangeLog,v 1.221 2012/08/31 17:00:02 caster Exp $
+
+  31 Aug 2012; Vlastimil Babka <caster@gentoo.org> sun-jre-bin-1.6.0.35.ebuild:
+  Fix download URL, bug #433553.
 
 *sun-jre-bin-1.6.0.35 (31 Aug 2012)
 
