@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/oracle-jdk-bin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.22 2012/08/31 10:03:42 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.23 2012/08/31 17:02:27 caster Exp $
+
+  31 Aug 2012; Vlastimil Babka <caster@gentoo.org>
+  oracle-jdk-bin-1.7.0.7.ebuild:
+  Fix download URL, bug #433553.
 
 *oracle-jdk-bin-1.7.0.7 (31 Aug 2012)
 
